fix for single event spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -333,6 +333,7 @@ html, body {
   }
   
   .container-content {
+    min-height: 100%;
     display: flex;
     flex-direction: column;
   }
@@ -340,8 +341,9 @@ html, body {
   .content {
     flex: 1;
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
-  } 
+  }  
 
   /* For Safari on iOS */
   @supports (-webkit-touch-callout: none) {
